syntax = "proto3";

enum PhoneType {
  MOBILE = 0;
  HOME = 1;
  WORK = 2;
}

message PhoneNumber {
  string number = 1;
  PhoneType type = 2;
}

message Person {
  int64 id = 1;
  string name = 2;
  string email = 3;
  repeated PhoneNumber phones = 4;
  map<string, string> tags = 5;
  bool isBlocked  = 6;
}

message AddressBook {
  repeated Person people = 1;
}
